# LinkLite

./: .gitignore
.github/workflows/: node.js.yml
LinkLiteFrontend/: package-lock.json  package.json
LinkLiteFrontend/src/: App.jsx
backend/: .env  .gitignore  Cargo.toml  diesel.toml
backend/migrations/2024-10-26-220336_create_url/: down.sql  up.sql
backend/migrations/2025-01-17-123215_update_schema/: up.sql
backend/src/: main.rs  schema.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
